tests/snapshots/test_runner__tests__compiler__typecheck__function_arguments_mismatch.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : | Integer => Integer
  = | x => x
    | _ _ => 1

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_arguments_mismatch.kk:4:7
  │
4 │     | _ _ => 1
  │       ^^^ Function arguments length mismatch
  │
  = Expected 1 argument only, but 2 arguments are provided.
